# GIMKit

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docs-preview.yml  docs.yml  release.yml
dataset/: mask_cnn_daily_mail.py  mask_gsm8k_reasoning.py  mask_hk_o1aw.py  mask_kaist_cot.py  mask_lima.py  mask_magpie_reasoning.py  mask_numina_math.py  mask_o1_journey.py  mask_process_bench.py  mask_uhgeval.py  upload_gim_sft.py  upload_masked_io.py  utils.py
datasets/: mask_gsm8k_reasoning.py  mask_hk_o1aw.py  mask_kaist_cot.py  mask_magpie_reasoning.py  mask_o1_journey.py  mask_process_bench.py  utils.py
docs/: api.md  index.html  index.md  installation.md  quickstart.md  requirements.txt  style.css  usage.md
evals/: commands.sh  queries.py  run.py
examples/: cases.ipynb  comparison_example.py  cv_parser.py  gimkit_quickstart.py  grammar_example.py  hello_world.py  json_schema_example.py  non_gim_llm_example.py  regex_example.py
exp/09101-SIM-1st/: configs.py  train.py
pr-preview/pr-175/: 404.html  (+3 more)
quickstart/: index.html
results/: aggregated_results_match.csv
scripts/: build_and_upload_dataset.sh
search/: search_index.json
tests/: smoke_test.py  test_contexts.py  test_dsls.py  test_gimkit.py  test_guide.py  test_guides.py  test_log.py  test_parse.py  test_parsing.py  test_prompts.py  test_regex.py  test_schemas.py  test_tag.py
training/: finetune.py
ui/: data-viewer.html  demo.html
usage/: index.html
(+37 files in other folders)
