[project]
name = "gimkit"
version = "0.0.1"
description = "Guided Infilling Modeling"
readme = "README.md"
authors = [
    { name = "Shichao Song", email = "song.shichao@outlook.com" }
]
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dataset = [
    "datasets==3.6.0",  # The next version, v4.0.0 has bad backward compatibility for now
]
dev = [
    "mypy>=1.18.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.13.0",
]
eval = [
    "vllm>=0.10.1.1",
]
training = [
    "swanlab>=0.6.9",
    "transformers==4.55.4",  # unsloth currently works best with this version for now
    "unsloth>=2025.9.3",
]

[build-system]
requires = ["uv_build>=0.8.16,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
fix = true
line-length = 100
target-version = "py312"
lint.extend-select = [
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "ERA", # flake8-eradicate/eradicate
    "I",   # isort
    "N",   # pep8-naming
    "PIE", # flake8-pie
    "PGH", # pygrep
    "RUF", # ruff checks
    "SIM", # flake8-simplify
    "TC", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "UP",  # pyupgrade
]
lint.ignore = [
    "RUF001", # ambiguous-unicode-character-string
    "PGH003", # blanket-type-ignore
]
lint.isort.lines-between-types = 1
lint.isort.lines-after-imports = 2
